--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --primaryColor:hsl(14, 90%, 53%);
+  --primaryLightColor:hsl(14, 96%, 91%);
+  --bgColor:hsl(0, 0%, 100%);
+  --formColor:hsl(20, 42%, 87%);
+  --whiteColor:hsl(0, 0%, 100%);
+  --blackColor:hsl(0, 0%, 18%);
+  --greyColor:hsl(0, 0%, 51%);
+  --inputColor:hsl(330, 12%, 97%);
+  --cardColor:hsl(300, 3%, 94%);
+  --biggestFontSize:2.5rem;
+  --h1FontSize:2rem;
+  --h2FontSize:1.25rem;
+  --h3FontSize:1rem;
+  --normalFontSize:0.938rem;
+  --smallFontSize:0.813rem;
+  --smallestFontSize:0.75rem;
+  --borderRadius:3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: var(--bgColor);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grid {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  font-size: var(--smallFontSize);
 }
+
+html {
+  font-size: 90%;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+.icon {
+  font-size: var(--h2FontSize);
+  cursor: pointer;
+}
+
+img,
+video {
+  height: auto;
+  width: 100%;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: var(--borderRadius);
+  padding: 0.8rem 1rem;
+  color: var(--whiteColor);
+  background-color: var(--primaryColor);
+}
+.btn:hover {
+  transition: 0.3s ease;
+}
+
+.secTitle {
+  display: none;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: var(--blackColor);
+  flex-direction: column;
+  gap: 1rem;
+}
+.secTitle p {
+  color: var(--blackColor);
+  font-size: var(--normalFontSize);
+  font-weight: 400;
+}
+
+.secHeading {
+  padding-bottom: 1.5rem;
+}
+
+.btn .icon {
+  margin-left: 0.5rem;
+}
+
+.btn:hover {
+  color: var(--primaryColor);
+  background-color: var(--primaryLightColor);
+}
+
+.section {
+  padding: 4rem 0 2rem;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+::-moz-selection {
+  background-color: var(--primaryLightColor);
+  color: var(--primaryColor);
+}
+
+::selection {
+  background-color: var(--primaryLightColor);
+  color: var(--primaryColor);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--primaryLightColor);
+}
+
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: var(--primaryColor);
+  border-radius: var(--borderRadius);
+}/*# sourceMappingURL=App.css.map */
