add some contents

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
 
     // FONT and Typography
     --biggestFontSize:2.5rem;
-    --h1FontSize:2rem;
+    --h1FontSize:1.6rem;
     --h2FontSize:1.25rem;
     --h3FontSize:1rem;
     --normalFontSize:0.938rem;
@@ -42,7 +42,7 @@ body{
     align-items: center;
 }
 .grid{
-    display: flex;
+    display: grid;
     align-items: center;
     gap: 1.5rem;
 }
