--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap");
 :root {
   --primaryColor:hsl(14, 90%, 53%);
   --primaryLightColor:hsl(14, 96%, 91%);
@@ -9,7 +10,7 @@
   --inputColor:hsl(330, 12%, 97%);
   --cardColor:hsl(300, 3%, 94%);
   --biggestFontSize:2.5rem;
-  --h1FontSize:2rem;
+  --h1FontSize:1.6rem;
   --h2FontSize:1.25rem;
   --h3FontSize:1rem;
   --normalFontSize:0.938rem;
