--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap');
+
 :root{
     --primaryColor:hsl(14, 90%, 53%);
     --primaryLightColor:hsl(14, 96%, 91%);
@@ -12,7 +14,7 @@
 
     // FONT and Typography
     --biggestFontSize:2.5rem;
-    --h1FontSize:2rem;
+    --h1FontSize:1.6rem;
     --h2FontSize:1.25rem;
     --h3FontSize:1rem;
     --normalFontSize:0.938rem;
