--- a/src/Components/Destinations/Destinations.css
+++ b/src/Components/Destinations/Destinations.css
@@ -1,1 +1,55 @@
-/*# sourceMappingURL=Destinations.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap");
+:root {
+  --primaryColor:hsl(14, 90%, 53%);
+  --primaryLightColor:hsl(14, 96%, 91%);
+  --bgColor:hsl(0, 0%, 100%);
+  --formColor:hsl(20, 42%, 87%);
+  --whiteColor:hsl(0, 0%, 100%);
+  --blackColor:hsl(0, 0%, 18%);
+  --greyColor:hsl(0, 0%, 51%);
+  --inputColor:hsl(330, 12%, 97%);
+  --cardColor:hsl(300, 3%, 94%);
+  --biggestFontSize:2.5rem;
+  --h1FontSize:1.6rem;
+  --h2FontSize:1.25rem;
+  --h3FontSize:1rem;
+  --normalFontSize:0.938rem;
+  --smallFontSize:0.813rem;
+  --smallestFontSize:0.75rem;
+  --borderRadius:3rem;
+}
+
+.destination .secContainer .redText {
+  color: var(--primaryColor);
+  font-size: var(--smallFontSize);
+  font-weight: 500;
+}
+.destination .secContainer h3 {
+  font-size: var(--h1FontSize);
+}
+.destination .secContainer .searchField {
+  margin-top: 2rem;
+  gap: 1rem;
+}
+.destination .secContainer .searchField .inputField {
+  background-color: var(--primaryLightColor);
+  padding: 1rem;
+  border-radius: var(--borderRadius);
+  gap: 0.5rem;
+}
+.destination .secContainer .searchField .inputField input {
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+}
+.destination .secContainer .searchField .inputField .icon {
+  color: var(--blackColor);
+}
+.destination .secContainer .searchField .btn {
+  gap: 0.5rem;
+  margin: auto;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}/*# sourceMappingURL=Destinations.css.map */
